--- a/Teachers2.html
+++ b/Teachers2.html
@@ -27,180 +27,186 @@
 		  
 		</div>
 		<div class="row" data-equalizer >
-		  <div class="large-3 columns panel" data-equalizer-watch>
-		    <ul class="side-nav">
-			  <li><a href="#">
-			  	<form>
-			  	<pre><h1>   ISC</h1></pre>
-				  <div class="row">
-				    <div class="small-12 columns">
-				      <label>Search
-				        <input type="text" placeholder="Find your teachers" />
-				      </label>
-				    </div>
-				  </div>
-				</form>
-			  </a></li>
-			  Do you want to search your teachers for...
-			  <br></br>
-			  <li><pre id="c7"><a href="#" class="button">Teachers </a></pre></li>
-			  <li><pre id="c7"><a href="#" class="button">Top rates </a></pre></li>
-			  <li><pre id="c7"><a href="#" class="button">Top views</a></pre></li>
-			</ul>
-		</div>
+			<div class="large-12 columns">
+			  <div class="large-3 columns panel" data-equalizer-watch>
+			    <ul class="side-nav">
+				  <li><a href="#">
+				  	<form>
+				  	<pre><h3>      ISC</h3></pre>
+					  <div class="row">
+					    <div class="small-12 columns">
+					      <label>Search
+					        <input type="text" placeholder="Find your teachers" />
+					      </label>
+					    </div>
+					  </div>
+					</form>
+				  </a></li>
+				  Do you want to search your teachers for...
+				  <br></br>
+				  <li><pre id="c7"><a href="#" class="button">Teachers </a></pre></li>
+				  <li><pre id="c7"><a href="#" class="button">Top rates </a></pre></li>
+				  <li><pre id="c7"><a href="#" class="button">Top views</a></pre></li>
+				</ul>
+			</div>
 
-		<nav class="breadcrumbs">
-		  <a href="index.html">Home</a>
-		  <a href="By Major.html">ISC</a>
-		  <a href="Semester.html">1° Semester</a>
-		  <a class="current" href="#">Teachers</a>
-		</nav>
-		  <div class="large-9 columns panel" data-equalizer-watch>
-		  	<div class="row" data-equalizer>
-  				<div class="large-6 columns panel" data-equalizer-watch>
-    				Edgar Jiménez - ISC<h4>6/10</h4>
-  				</div>
-  				<div class="large-6 columns">
-				    <ul class="pricing-table" data-equalizer-watch>
-				    <p><p/>
-				    <p><pre id="c7">   Explanation: <img src="3star.PNG" height="40" width="60"></pre></p> 
+			<nav class="breadcrumbs">
+			  <a href="index.html">Home</a>
+			  <a href="By Major.html">ISC</a>
+			  <a href="Semester.html">1° Semester</a>
+			  <a class="current" href="#">Teachers</a>
+			</nav>
+			  <div class="large-9 columns panel" data-equalizer-watch>
+			  	<div class="row" data-equalizer>
+						<div class="large-6 columns panel" data-equalizer-watch>
+						Edgar Jiménez - ISC<h4>6/10</h4>
+						</div>
+					<div class="large-6 columns panel"data-equalizer-watch>
+				    <ul>
+					    <p>Explanation: <img src="3star.PNG" height="40" width="60"></p>
 
-				    <p><pre id="c7">   Homeworks: <img src="3star.PNG" height="40" width="60"></pre></p>
+					    <p>Homeworks: <img src="3star.PNG" height="40" width="60"></p>
 
-				    <p><pre id="c7">   Exams: <img src="2star.PNG" height="40" width="40"></pre></p>
+					    <p>Exams: <img src="2star.PNG" height="40" width="40"></p>
 
-				    <p><pre id="c7">   Knowledge:<img src="4star.PNG" height="40" width="80"></pre></p>
+					    <p>Knowledge:<img src="4star.PNG" height="40" width="80"></p>
 				    </ul>
-			  	</div>
-			</div>
-			<div class="row" data-equalizer>
-				<div class="large-6 columns panel" data-equalizer-watch>
-				  	<form>
-					    <h4>Want to see reviews?<a href="#" data-reveal-id="myModal" class="button postfix">Click here!</a>		
-						  <p><a href="#"><font size="1"></font></a></p>
-				          <div id="myModal" class="reveal-modal" data-reveal>
-				          	<h4>Edgar Jiménez - ISC</h4>
-				          	<pre>															 09/04/2015</pre>
-				          	<p>Edgar Jiménez gives class in a simple way, his classe’s are easy, but the homeworks are not that easy, sometimes they are ambiguous, although, his exams are done fine, and he show his knowledge during class time. 
-				          	</p>
-				          	<pre>															 07/04/2015</pre>
-				          	<p>I like how Edgar Jiménez gives class, but the homeworks… I don’t like his homeworks, they are hard, but, with some dedication you can do them. He is really smart in his area of study, but he makes doable exams, if you are able, choose this teacher.
-				          	</p>
-				            <a class="close-reveal-modal">&#215;</a>
-				          </div>
-					    </h4>
-		    		</form>
+			  		</div>
 				</div>
+				<div class="row" data-equalizer>
+					<div class="large-6 columns panel" data-equalizer-watch>
+					  	<form>
+						    <label>Want to see reviews?<a href="#" data-reveal-id="myModal" class="button postfix">Click here!</a>		
+							  <p><a href="#"><font size="1"></font></a></p>
+					          <div id="myModal" class="reveal-modal" data-reveal>
+					          	<h4>Edgar Jiménez - ISC</h4>
+					          	<pre>															 09/04/2015</pre>
+					          	<p>Edgar Jiménez gives class in a simple way, his classe’s are easy, but the homeworks are not that easy, sometimes they are ambiguous, although, his exams are done fine, and he show his knowledge during class time. 
+					          	</p>
+					          	<pre>															 07/04/2015</pre>
+					          	<p>I like how Edgar Jiménez gives class, but the homeworks… I don’t like his homeworks, they are hard, but, with some dedication you can do them. He is really smart in his area of study, but he makes doable exams, if you are able, choose this teacher.
+					          	</p>
+					            <a class="close-reveal-modal">&#215;</a>
+					          </div>
+						    </label>
+			    		</form>
+					</div>
 
-			  	<div class="large-6 columns panel" data-equalizer-watch>
-				  	<form>
-					    <label>Write your review
-					        <input type="text" placeholder="Tell us your opinion"/>
-					    </label>
-					    <a href="#" class="button postfix">Send</a>
-		    		</form>
+				  	<div class="large-6 columns panel" data-equalizer-watch>
+					  	<form>
+						    <label>Write your review
+						        <input type="text" placeholder="Tell us your opinion"/>
+						    </label>
+						    <a href="#" class="button postfix">Send</a>
+			    		</form>
+					</div>
 				</div>
+			  </div>
 			</div>
-		  </div>
 
 		  
+	 		<div class="large-12 columns">
+	 		  <div class="large-3 columns">
+	 		  </div>
+			  <div class="large-9 columns panel" data-equalizer-watch>
+			  	<div class="row" data-equalizer>
+						<div class="large-6 columns panel" data-equalizer-watch>
+						Julia Castellón - ISC<h4>8/10</h4>
+						</div>
+						<div class="large-6 columns panel"data-equalizer-watch>
+					    <ul>
+						    <p>Explanation: <img src="4star.PNG" height="40" width="80"></p>
 
-		  <div class="large-9 columns panel" data-equalizer-watch>
-		  	<div class="row" data-equalizer>
-  				<div class="large-6 columns panel" data-equalizer-watch>
-    				Julia Castellón - ISC<h4>8/10</h4>
-  				</div>
-  				<div class="large-6 columns">
-				    <ul class="pricing-table" data-equalizer-watch>
-				    <p></p>
-				    <p><pre id="c7">   Explanation: <img src="4star.PNG" height="40" width="80"></pre></p> 
+						    <p>Homeworks: <img src="5star.PNG" height="40" width="100"></p>
 
-				    <p><pre id="c7">   Homeworks: <img src="5star.PNG" height="40" width="100"></pre></p>
+						    <p>Exams: <img src="3star.PNG" height="40" width="60"></p>
 
-				    <p><pre id="c7">   Exams: <img src="3star.PNG" height="40" width="60"></pre></p>
-
-				    <p><pre id="c7">   Knowledge:<img src="4star.PNG" height="40" width="80"></pre></p>
-				    </ul>
-			  	</div>
-			</div>
-			<div class="row" data-equalizer>
-				<div class="large-6 columns panel" data-equalizer-watch>
-				  	<form>
-					    <h4>Want to see reviews?<a href="#" data-reveal-id="myModal2" class="button postfix">Click here!</a>		
-						  <p><a href="#"><font size="1"></font></a></p>
-				          <div id="myModal2" class="reveal-modal" data-reveal>
-				          	<h4>Julia Castellón - ISC</h4>
-				          	<pre>															19/04/2015</pre>
-				          	<p>Julia Castellón is good giving explanations during class, the homeworks are easy, and the exams are about things we see on class. You can be aware that she knows the things she is talking about really well. Highly recommended teacher.
-				          	</p>
-				          	<pre>															04/04/2015</pre>
-				          	<p>She is an excellent teacher, their explanation is clear, commonly I do not have doubts, but if I have one, I go to some tutoring sessions and she explain everything with patience. There are a few difficult homework, but hey really help to learn more info about the topic. The exams are basically the most important subjects.
-				          	</p>
-				            <a class="close-reveal-modal">&#215;</a>
-				          </div>
-					    </h4>
-		    		</form>
+						    <p>Knowledge:<img src="4star.PNG" height="40" width="80"></p>
+					    </ul>
+				  	</div>
 				</div>
+				<div class="row" data-equalizer>
+					<div class="large-6 columns panel" data-equalizer-watch>
+					  	<form>
+						    <label>Want to see reviews?<a href="#" data-reveal-id="myModal2" class="button postfix">Click here!</a>		
+							  <p><a href="#"><font size="1"></font></a></p>
+					          <div id="myModal2" class="reveal-modal" data-reveal>
+					          	<h4>Julia Castellón - ISC</h4>
+					          	<pre>															19/04/2015</pre>
+					          	<p>Julia Castellón is good giving explanations during class, the homeworks are easy, and the exams are about things we see on class. You can be aware that she knows the things she is talking about really well. Highly recommended teacher.
+					          	</p>
+					          	<pre>															04/04/2015</pre>
+					          	<p>She is an excellent teacher, their explanation is clear, commonly I do not have doubts, but if I have one, I go to some tutoring sessions and she explain everything with patience. There are a few difficult homework, but hey really help to learn more info about the topic. The exams are basically the most important subjects.
+					          	</p>
+					            <a class="close-reveal-modal">&#215;</a>
+					          </div>
+						    </label>
+			    		</form>
+					</div>
 
-			  	<div class="large-6 columns panel" data-equalizer-watch>
-				  	<form>
-					    <label>Write your review
-					        <input type="text" placeholder="Tell us your opinion"/>
-					    </label>
-					    <a href="#" class="button postfix">Send</a>
-		    		</form>
+				  	<div class="large-6 columns panel" data-equalizer-watch>
+					  	<form>
+						    <label>Write your review
+						        <input type="text" placeholder="Tell us your opinion"/>
+						    </label>
+						    <a href="#" class="button postfix">Send</a>
+			    		</form>
+					</div>
 				</div>
+			  </div>
 			</div>
-		  </div>
 
-		  <div class="large-9 columns panel" data-equalizer-watch>
-		  	<div class="row" data-equalizer>
-  				<div class="large-6 columns panel" data-equalizer-watch>
-    				Pedro Ruiz - ISC<h4>7.5/10</h4>
-  				</div>
-  				<div class="large-6 columns">
-				    <ul class="pricing-table" data-equalizer-watch>
-				    <p></p>
-				    <p><pre id="c7">   Explanation: <img src="3star.PNG" height="40" width="60"></pre></p> 
+			<div class="large-12 columns">
+			  <div class="large-3 columns">
+			  </div>
+			  <div class="large-9 columns panel" data-equalizer-watch>
+			  	<div class="row" data-equalizer>
+						<div class="large-6 columns panel" data-equalizer-watch>
+						Pedro Ruiz - ISC<h4>7.5/10</h4>
+						</div>
+						<div class="large-6 columns panel"data-equalizer-watch>
+					    <ul>
+						    <p>Explanation: <img src="3star.PNG" height="40" width="60"></p>
 
-				    <p><pre id="c7">   Homeworks: <img src="3star.PNG" height="40" width="60"></pre></p>
+						    <p>Homeworks: <img src="3star.PNG" height="40" width="60"></p>
 
-				    <p><pre id="c7">   Exams: <img src="5star.PNG" height="40" width="100"></pre></p>
+						    <p>Exams: <img src="5star.PNG" height="40" width="100"></p>
 
-				    <p><pre id="c7">   Knowledge:<img src="4star.PNG" height="40" width="80"></pre></p>
-				    </ul>
-			  	</div>
-			</div>
-			<div class="row" data-equalizer>
-				<div class="large-6 columns panel" data-equalizer-watch>
-				  	<form>
-					    <h4>Want to see reviews?<a href="#" data-reveal-id="myModal3" class="button postfix">Click here!</a>		
-						  <p><a href="#"><font size="1"></font></a></p>
-				          <div id="myModal3" class="reveal-modal" data-reveal>
-				          	<h4>Pedro Ruiz - ISC</h4>
-				          	<pre>															21/04/2015</pre>
-				          	<p>He is a good teacher, during his class explain every topic with patience and dedication; demonstrating their knowledge in the subject. The homework help a lot to understand and clarify doubts, but are really difficult and takes a lot of time doing it. Finally, the exams are nice because if you do your homework and pay attention in class, you won’t have any problem.
-				          	</p>
-				          	<pre>															16/04/2015</pre>
-				          	<p>I have Math III with him and I think that is not the best option because there are a lot of homework that take too much time to finish it. Their exams are challenging but not extremely difficult. I do not like too much the way of teaching, he knows really well the topics, but is really repetitive and boring. 
-				          	</p>
-				            <a class="close-reveal-modal">&#215;</a>
-				          </div>
-					    </h4>
-		    		</form>
+						    <p>Knowledge:<img src="4star.PNG" height="40" width="80"></p>
+					    </ul>
+				  	</div>
 				</div>
+				<div class="row" data-equalizer>
+					<div class="large-6 columns panel" data-equalizer-watch>
+					  	<form>
+						    <label>Want to see reviews?<a href="#" data-reveal-id="myModal3" class="button postfix">Click here!</a>		
+							  <p><a href="#"><font size="1"></font></a></p>
+					          <div id="myModal3" class="reveal-modal" data-reveal>
+					          	<h4>Pedro Ruiz - ISC</h4>
+					          	<pre>															21/04/2015</pre>
+					          	<p>He is a good teacher, during his class explain every topic with patience and dedication; demonstrating their knowledge in the subject. The homework help a lot to understand and clarify doubts, but are really difficult and takes a lot of time doing it. Finally, the exams are nice because if you do your homework and pay attention in class, you won’t have any problem.
+					          	</p>
+					          	<pre>															16/04/2015</pre>
+					          	<p>I have Math III with him and I think that is not the best option because there are a lot of homework that take too much time to finish it. Their exams are challenging but not extremely difficult. I do not like too much the way of teaching, he knows really well the topics, but is really repetitive and boring. 
+					          	</p>
+					            <a class="close-reveal-modal">&#215;</a>
+					          </div>
+						    </label>
+			    		</form>
+					</div>
 
-			  	<div class="large-6 columns panel" data-equalizer-watch>
-				  	<form>
-					    <label>Write your review
-					        <input type="text" placeholder="Tell us your opinion"/>
-					    </label>
-					    <a href="#" class="button postfix">Send</a>
-		    		</form>
+				  	<div class="large-6 columns panel" data-equalizer-watch>
+					  	<form>
+						    <label>Write your review
+						        <input type="text" placeholder="Tell us your opinion"/>
+						    </label>
+						    <a href="#" class="button postfix">Send</a>
+			    		</form>
+					</div>
 				</div>
+			  </div>
 			</div>
-		  </div>
-	</div>
+		</div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
